--- a/my-app/package.json
+++ b/my-app/package.json
@@ -7,13 +7,21 @@
     "@mlc-ai/web-llm": "^0.2.80",
     "@pdfme/generator": "^5.5.7",
     "@pdfme/ui": "^5.5.7",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-progress": "^1.1.8",
+    "@radix-ui/react-separator": "^1.1.8",
+    "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-toast": "^1.2.15",
     "@reduxjs/toolkit": "^2.11.1",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "dexie": "^4.2.1",
+    "lucide-react": "^0.561.0",
     "onnxruntime-web": "^1.23.2",
     "pdfjs-dist": "^5.4.449",
     "react": "^19.2.3",
@@ -22,6 +30,7 @@
     "react-router-dom": "^7.10.1",
     "react-scripts": "5.0.1",
     "redux-persist": "^6.0.0",
+    "tailwind-merge": "^3.4.0",
     "tesseract.js": "^6.0.1",
     "uuid": "^13.0.0",
     "web-vitals": "^2.1.4",
